Project

General

Profile

Actions

Bug #19753

closed

Deny reservation if expected backfill size would put us over backfill_full_ratio

Added by David Zafman about 7 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
High
Assignee:
David Zafman
Category:
Backfill/Recovery
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
OSD
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

We currently just check the full status based on disk usage. We need to adjust for the amount of data expected less the data already present.

Need to add the pg stat total in the reservation request?


Related issues 2 (0 open2 closed)

Related to RADOS - Bug #39383: Too much log output generated from PrimaryLogPG::do_backfill()ResolvedDavid Zafman04/18/2019

Actions
Blocked by RADOS - Bug #24801: PG num_bytes becomes hugeResolvedDavid Zafman07/06/2018

Actions
Actions #1

Updated by Greg Farnum almost 7 years ago

  • Project changed from Ceph to RADOS
  • Category set to Backfill/Recovery
  • Component(RADOS) OSD added
Actions #2

Updated by David Zafman almost 6 years ago

  • Status changed from New to In Progress
Actions #3

Updated by David Zafman almost 6 years ago

  • Blocked by Bug #24801: PG num_bytes becomes huge added
Actions #5

Updated by Neha Ojha over 5 years ago

  • Status changed from In Progress to 7
Actions #6

Updated by David Zafman over 5 years ago

  • Status changed from 7 to Resolved
Actions #7

Updated by imirc tw about 5 years ago

during backfilling after a failed disk the log files get spammed with do_backfill messages. log files easily grow beyond several GiB within hours

this is caused by https://github.com/ceph/ceph/pull/22797/files#diff-fb41013d27e932534adb50eb3de2aaa5R4273

is this expected behavior or is the log level on the dout too low?

Actions #8

Updated by David Zafman about 5 years ago

A couple of dout(0) should be dout(20) or some dout(10) for some less repetitive ones.

Actions #9

Updated by imirc tw about 5 years ago

would save a lot of diskspace if you could fix that :)

Actions #10

Updated by David Zafman about 5 years ago

  • Related to Bug #39383: Too much log output generated from PrimaryLogPG::do_backfill() added
Actions #11

Updated by David Zafman about 5 years ago

  • Pull request ID set to 22797
Actions

Also available in: Atom PDF