src/messages/MBackfillReserve.h
@@ -19,7 +19,7 @@
 #include "messages/MOSDPeeringOp.h"
 
 class MBackfillReserve : public MOSDPeeringOp {
-  static const int HEAD_VERSION = 4;
+  static const int HEAD_VERSION = 5;
   static const int COMPAT_VERSION = 4;
 public:
   spg_t pgid;
@@ -35,6 +35,7 @@ public:
   };
   uint32_t type;
   uint32_t priority;
+  int64_t primary_num_bytes;
 
   spg_t get_spg() const {
     return pgid;
@@ -52,7 +53,7 @@ public:
       return new PGPeeringEvent(
 	query_epoch,
 	query_epoch,
-	RequestBackfillPrio(priority));
+	RequestBackfillPrio(priority, primary_num_bytes));
     case GRANT:
       return new PGPeeringEvent(
 	query_epoch,
@@ -90,13 +91,14 @@ public:
 
   MBackfillReserve()
     : MOSDPeeringOp(MSG_OSD_BACKFILL_RESERVE, HEAD_VERSION, COMPAT_VERSION),
-      query_epoch(0), type(-1), priority(-1) {}
+      query_epoch(0), type(-1), priority(-1), primary_num_bytes(0) {}
   MBackfillReserve(int type,
 		   spg_t pgid,
-		   epoch_t query_epoch, unsigned prio = -1)
+		   epoch_t query_epoch, unsigned prio = -1,
+                   int64_t num_bytes = 0)
     : MOSDPeeringOp(MSG_OSD_BACKFILL_RESERVE, HEAD_VERSION, COMPAT_VERSION),
       pgid(pgid), query_epoch(query_epoch),
-      type(type), priority(prio) {}
+      type(type), priority(prio), primary_num_bytes(num_bytes) {}
 
   const char *get_type_name() const override {
     return "MBackfillReserve";
@@ -134,6 +136,10 @@ public:
     decode(type, p);
     decode(priority, p);
     decode(pgid.shard, p);
+    if (header.version >= 5)
+      decode(primary_num_bytes, p);
+    else
+      primary_num_bytes = 0;
   }
 
   void encode_payload(uint64_t features) override {
@@ -156,6 +162,7 @@ public:
     encode(type, payload);
     encode(priority, payload);
     encode(pgid.shard, payload);
+    encode(primary_num_bytes, payload);
   }
 };
 
